schema/testdata/validation_expression_array_operator_mismatch/schema.keel
model Post {
  fields {
    authors Author[]
  }

  @permission(
    expression: "bob" > post.authors.name,
    actions: [get]
  )
}

model Author {
  fields {
    name Text
  }
}
