schema/testdata/errors/expression_forbidden_lhs_array.keel
model Post {
    fields {
        authors Author[]
    }

    @permission(
        //expect-error:21:38:E027:left hand side operand cannot be an array for 'in' and 'not in'
        expression: post.authors.name in post.authors.name,
        actions: [get]
    )
}

model Author {
    fields {
        name Text
        post Post
    }
}
